Update _config.yml profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nomfundo Gasa
-logo: /assets/img/headshot_circle.png
+logo: assets/IMG_20240727_220551.jpg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
